--- a/views/admin-lte/footer.ejs
+++ b/views/admin-lte/footer.ejs
@@ -1,8 +1,8 @@
 <!-- Main Footer -->
-<footer class="main-footer">
+<!--<footer class="main-footer">
     <strong>Copyright &copy; 2015 <a href="#">i9</a>. </strong> All rights reserved.
 
     <a href="/static/#/about"  ><i class="ion-information-circled"></i>  </a>
-</footer>
+</footer>-->
 </body>
 </html>
