--- a/views/admin-lte/cm-admin/categories.ejs
+++ b/views/admin-lte/cm-admin/categories.ejs
@@ -1,8 +1,8 @@
 <!-- Main content -->
-<div class="col-lg-12" ng-controller="CategoryListController as categoryList">
+<div class="col-lg-12" ng-controller="CategoryListController">
     <div class="box">
         <div class="box-body with-border">
-            <div ng-controller="categoryFormController as frm">
+            <div ng-controller="categoryFormController">
                 <form role="form" ng-submit="processForm('root')" id="rootCategory">
                     <div class="col-xs-6 input-group input-group-sm" ng-class="{ 'has-error' : errorName }">
                         <input type="text" name="category" class="form-control input-sm col-xs-3"
@@ -21,36 +21,42 @@
             </div>
         </div>
     </div>
+
+    <script type="text/ng-template"  id="tree_item_renderer.html">
+        <li id="{{data.slug}}">
+            <p><span><a href="#/categories/{{data.slug}}">{{data.category}}</a></span></p>
+
+            <form role="form" ng-submit="processForm(data._id)">
+                <div class="col-xs-12 input-group input-group-sm col-lg-6" >
+                    <input name="category" type="text" ng-model="formData[data._id].category"
+                           class="form-control input-sm col-xs-3" placeholder="Add Child ..."/>
+                    <input type="hidden" name="parent" ng-value="data._id"
+                           ng-model="formData[data._id].parentCategory"
+                           ng-init="formData[data._id].parentCategory=data._id"/>
+                      <span class="input-group-btn">
+                      <button class="btn btn-info btn-flat" type="submit">
+                          <i class="fa fa-plus"></i> Add Child
+                      </button>
+                      </span>
+                    <span class="help-block" ng-show="errorName">{{ errorName }}</span>
+                </div>
+            </form>
+            <ul>
+                <li ng-repeat="data in data.subCategories" ng-include="'tree_item_renderer.html'">
+                </li>
+            </ul>
+        </li>
+    </script>
+
     <div class="box">
         <div class="box-body with-border">
             <table id="categoryList" class="table table-bordered  ">
-                <tbody ng-controller="categoryFormController as frm">
-                <tr ng-repeat="category in categories.categories">
+                <tbody ng-controller="categoryFormController">
+                <tr>
                     <td>
-                        <p><span><a href="#/categories/{{category.slug}}">{{category.category}}</a></span></p>
-
-                        <form role="form" ng-submit="processForm(category._id)">
-                            <div class="col-xs-6 input-group input-group-sm">
-                                <input name="category" type="text" ng-model="formData[category._id].category"
-                                       class="form-control input-sm col-xs-3" placeholder="Add Child ..."/>
-                                <input type="hidden" name="parent" ng-value="category._id" value="category._id"
-                                       ng-model="formData[category._id].parentCategory"
-                                       ng-init="formData[category._id].parentCategory=category._id"/>
-                              <span class="input-group-btn">
-                              <button class="btn btn-info btn-flat" type="submit"><i class="fa fa-plus"></i> Add Child
-                              </button>
-                              </span>
-                                <span class="help-block" ng-show="errorName">{{ errorName }}</span>
-                            </div>
-                        </form>
-                        <ul class="nav nav-pills nav-stacked" ng-show="(category.subCategories.length)">
-                            <h5><strong> sub categories: </strong></h5>
-                            <li ng-repeat="subCategory in category.subCategories">
-                                <a href="#/categories/{{subCategory.slug}}">{{subCategory.category}}</a>
-                            </li>
+                        <ul ng-repeat="data in categories" ng-include="'tree_item_renderer.html'">
                         </ul>
                     </td>
-
                 </tr>
                 </tbody>
             </table>
@@ -60,9 +66,3 @@
     <!-- /.box-body -->
 </div>
 </div>
-<script>
-    $('document').ready(function () {
-        //$("#categoryList").dataTable();
-    });
-
-</script>
