--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -10,7 +10,7 @@
             </a>
             <% } %>
 
-                <a ngCloak ng-show="user" href="/catalogs/course/create" class="top-menu-left">
+                <a ngCloak ng-show="user" href="/course/create" class="top-menu-left">
                     <i class="ionicons ion-android-create"></i>   <b>Create Course</b>
                 </a>
 
