user model refactor

--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -96,7 +96,7 @@
 </div><!-- ./wrapper -->
 <% include jsfooter %>
 
-<% if(user && user.roles == 'admin'){ %>
+<% if(user && user.role == 'admin'){ %>
 <div ng-controller="AdminHomePageController"></div>
 <script>
     app.controller('AdminHomePageController', function($scope, $http, $rootScope) {
