categories model refactor

--- a/views/admin-lte/catalogs/course.ejs
+++ b/views/admin-lte/catalogs/course.ejs
@@ -11,7 +11,7 @@
             <ol class="breadcrumb">
                 <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
                 <li><a href="/courses"> </i> Courses</a></li>
-                <li><a href="/<%=course.category.slug%>"> </i> <%=course.category.category%></a></li>
+                <li><a href="/<%=course.category.slug%>"> </i> <%=course.category.name%></a></li>
                 <li class="active"><%=course.course%></li>
             </ol>
         </section>
