--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -3,7 +3,7 @@
     <!-- Logo -->
     <a href="/" class="logo"><b>Course</b>Mapper</a>
 
-    <nav class="navbar navbar-static-top" role="navigation" ng-controller="MainMenuController as mainMenu">
+    <nav class="navbar navbar-static-top" role="navigation" ng-controller="MainMenuController">
         <div class="navbar-left">
             <% if(locals.showSidebar && showSidebar){ %>
             <a class="top-menu-left visible-xs" data-toggle="offcanvas" role="button"><i class="ionicons ion-more"> </i>
