--- a/views/admin-lte/cm-admin/category.ejs
+++ b/views/admin-lte/cm-admin/category.ejs
@@ -2,8 +2,8 @@
 <div class="col-lg-12">
     <div class="box">
         <div class="box-body with-border">
-            <div ng-controller="categoryDetailController as cat">
-                <h3>Category : {{category.category}}</h3>
+            <div ng-controller="categoryDetailController">
+                <h3>Category : {{category.name}}</h3>
 
                 <div class="panel box box-primary">
                     <div class="box-header with-border">
