refactor course, tags

--- a/views/admin-lte/catalogs/courses.ejs
+++ b/views/admin-lte/catalogs/courses.ejs
@@ -30,7 +30,7 @@
                         <button class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
                         &nbsp;Processing</span>
                     <h4>Available Tags:</h4>
-                    <span class="label label-primary" ng-repeat="t in tags">{{t.tag}}</span>
+                    <span class="label label-primary" ng-repeat="t in tags">{{t.name}}</span>
                     <h4>Courses:</h4>
                 </div>
 
