--- a/views/admin-lte/cm-admin/mainMenu.ejs
+++ b/views/admin-lte/cm-admin/mainMenu.ejs
@@ -1,6 +1,6 @@
 
 <header class="main-header">
-    <nav class="navbar navbar-static-top" ng-controller="MainMenuController as mainMenu">
+    <nav class="navbar navbar-static-top" ng-controller="MainMenuController">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a href="/" class="logo"><b>Course</b>Mapper</a>
@@ -17,13 +17,13 @@
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Manage <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="#/categories">Categories</a></li>
-                            <li><a href="#/tags">Tags</a></li>
+                            <!--<li><a href="#/tags">Tags</a></li>
                             <li><a href="#/courses">Courses</a></li>
                             <li class="divider"></li>
-                            <li><a href="#/users">Users</a></li>
+                            <li><a href="#/users">Users</a></li>-->
                         </ul>
                     </li>
-                    <li><a href="#/modules">Modules</a></li>
+                    <!--<li><a href="#/modules">Modules</a></li>-->
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
@@ -45,7 +45,7 @@
 
                                     <div class="checkbox">
                                         <label>
-                                            <input type="checkbox" value="yes" name="rememberMe"> Remember me
+                                            <input type="checkbox" value="yes" name="rememberMe" > Remember me
                                         </label>
                                     </div>
                                     <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
