--- a/views/admin-lte/login.ejs
+++ b/views/admin-lte/login.ejs
@@ -5,7 +5,7 @@
     <% include mainMenu %>
 
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
+    <div class="content-wrapper" ng-controller="MainMenuController">
 
         <!-- Main content -->
         <section class="content">
@@ -34,8 +34,8 @@
 
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" value="yes" name="rememberMe"> Remember me
-                            </label><p class="help-block"> </p>
+                                <input type="checkbox" value="yes" name="rememberMe" ng-model="rememberMe" ng-checked="rememberMe"> Remember me
+                            </label><p class="help-block"></p>
                         </div>
 
                         <div class="control-group">
