--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -36,7 +36,7 @@
 
                                 <div class="checkbox">
                                     <label>
-                                        <input type="checkbox" value="yes" name="rememberMe"> Remember me
+                                        <input type="checkbox" value="yes" name="rememberMe" ng-model="rememberMe" ng-checked="rememberMe"> Remember me
                                     </label>
                                 </div>
                                 <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
